--- a/src/templates/footer.ejs
+++ b/src/templates/footer.ejs
@@ -3,9 +3,9 @@
     background: #4b2179;
     padding: 30px 0;
     text-align: center;
-    font-family: Arial;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: #fff;
   "
 >
-  <p>Live Forever</p>
+  <p>Let's build your vehicle together.</p>
 </div>
