--- a/src/templates/header.ejs
+++ b/src/templates/header.ejs
@@ -3,8 +3,8 @@
     background: #e2d4f0;
     padding: 30px 0;
     text-align: center;
-    font-family: Arial;
+    font-family: Georgia, 'Times New Roman', Times, serif;
   "
 >
-  <h1>Strong Leader</h1>
+  <h1>Vrutti Technologies</h1>
 </div>
