--- a/src/templates/welcome.ejs
+++ b/src/templates/welcome.ejs
@@ -1,10 +1,23 @@
 <%- include('./header.ejs') %>
 
-<div
-  style="margin: 0 auto; max-width: 720px; padding: 30px 0; font-family: Arial"
->
-  <h3>Hello, <%= receiver %></h3>
-  <p><%= content %></p>
-</div>
+  <div style="margin: 0 auto; max-width: 720px; padding: 30px 0; font-family: Arial">
 
-<%- include('./footer.ejs') %>
+    <img style="display: block; margin-left: auto; margin-right: auto; border-radius: 40px;"
+      src="<%= staff.image %>"
+      alt="Vrutti Tech." height="300" width="700">
+    
+    <h2>Senior Dev. = <%= staff.senior %>
+        </h3>
+        <h2>Junior Dev.:</h2>
+        <ul>
+          <% for(var i=0; i < staff.junior.length; i++) { %>
+          <li>
+            <h3><%= staff.junior[i] %>
+            </h3>
+          </li>
+          <% } %>
+        </ul>
+
+  </div>
+
+  <%- include('./footer.ejs') %>
